<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.pincette</groupId>
  <artifactId>pincette-netty-http</artifactId>
  <version>3.2.13</version>
  <packaging>jar</packaging>
  <name>pincette-netty-http</name>
  <description>A simple Netty HTTP server and client</description>
  <url>https://github.com/wdonne/pincette-netty-http</url>

  <organization>
    <name>Pincette</name>
    <url>https://pincette.net</url>
  </organization>

  <scm>
    <url>https://github.com/wdonne/pincette-netty-http</url>
    <connection>scm:git@github.com:wdonne/pincette-netty-http.git</connection>
    <developerConnection>scm:git@github.com:wdonne/pincette-netty-http.git</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>wdonne</id>
      <name>Werner Donné</name>
      <email>werner.donne@pincette.net</email>
      <url>https://pincette.net</url>
      <organization>Pincette</organization>
      <organizationUrl>https://pincette.net</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>BSD-style</name>
      <url>http://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-bom</artifactId>
        <version>4.1.127.Final</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-common</artifactId>
      <version>2.5.5</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs</artifactId>
      <version>3.11.0</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-jwt</artifactId>
      <version>1.1.3</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-json</artifactId>
      <version>2.3.2</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-handler</artifactId>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-codec-http</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.13.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.8</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.3</version>
        <configuration>
          <additionalJOptions>
            <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin-${project.name}
            </additionalJOption>
          </additionalJOptions>
          <links>
            <link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
            <link>https://www.javadoc.io/doc/net.pincette/pincette-common/latest/</link>
            <link>https://www.javadoc.io/doc/net.pincette/pincette-rs/latest/</link>
            <link>https://www.javadoc.io/doc/io.netty/netty-handler/latest/</link>
            <link>https://www.javadoc.io/doc/io.netty/netty-codec-http/latest/</link>
          </links>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
